Added Docker stuff and testing

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,4 +28,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ h-randhawa/mars-rover-streamlit }}:latest
+          tags: ghcr.io/h-randhawa/mars-rover-streamlit:latest
